# zecwallet-light-cli

./: Cargo.toml  README.md  mkrelease.sh
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  version.rs
docker/: Dockerfile
lib/: Cargo.toml
lib/proto/: service.proto
lib/src/: commands.rs  compact_formats.rs  grpc_connector.rs  lib.rs  lightclient.rs  lightwallet.rs
lib/src/blaze/: block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_tx.rs  fetch_taddr_txns.rs  sync_status.rs  syncdata.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
lib/src/lightclient/: checkpoints.rs  faketx.rs  lightclient_config.rs  test_server.rs  tests.rs
lib/src/lightwallet/: data.rs  keys.rs  message.rs  wallet_txns.rs  walletokey.rs  wallettkey.rs  walletzkey.rs
