[workspace]
members = [
    "lib",
    "cli",
]

[profile.release]
debug = false

[patch.crates-io]
zcash_address = { git = "https://github.com/zingolabs/librustzcash", branch = "master_zingo_recovering_tool"}
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", branch = "master_zingo_recovering_tool"}
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash", branch = "master_zingo_recovering_tool"}
zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", branch = "master_zingo_recovering_tool"}
zcash_encoding = { git = "https://github.com/zingolabs/librustzcash", branch = "master_zingo_recovering_tool"}
zcash_proofs = { git = "https://github.com/zingolabs/librustzcash", branch = "master_zingo_recovering_tool"}
orchard = { git = "https://github.com/zingolabs/orchard", branch = "master_zingo_recovering_tool" }

#zcash_address = { path = "../librustzcash/components/zcash_address/" }
#zcash_primitives = { path = "../librustzcash/zcash_primitives/" }
#zcash_client_backend = { path = "../librustzcash/zcash_client_backend" }
#zcash_note_encryption = { path = "../librustzcash/components/zcash_note_encryption" }
#zcash_encoding = { path = "../librustzcash/components/zcash_encoding/" }
#zcash_proofs = { path = "../librustzcash/zcash_proofs/" }
#orchard = { path = "../orchard/" }