[package]
name = "zecwalletlitelib"
version = "0.1.0"
authors = ["Aditya Kulkarni <adityapk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_params"]
embed_params = []


[dependencies]
arr_macro = "0.1.3"
base64 = "0.13.0"
bytes = "0.4"
log4rs = "1.0.0"
rand = "0.8.5"
http = "0.2.4"
tonic = {version = "0.7.2", features = ["tls", "tls-roots"]}
prost = "0.10.4"
tokio =  { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tokio-rustls = "0.23.4"
futures = "0.3.21"
log = "0.4.14"
hex = "0.3"
ring = "0.16.20"
dirs = "3.0.2"
json = "0.12.4"
rayon = "1.5.3"
webpki-roots = "0.21.0"

lazy_static = "1.4.0"
secp256k1 = "=0.21.3"
ripemd160 = "0.9.1"
sha2 = "0.9.5"
base58 = "0.1.0"
tiny-bip39 = "0.8.0"
sodiumoxide = "0.2.5"
byteorder = "1"

pairing = "0.22"
ff = "0.12"
jubjub = "0.9.0"
bls12_381 = "0.7"
group = "0.12"

rust-embed = { version = "6.3.0", features = ["debug-embed"] }

zcash_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "7183acd2fe12ebf201cae5b871166e356273c481", features = ["transparent-inputs"] }
# zcash_primitives = { path = "../../librustzcash/zcash_primitives", features = ["transparent-inputs"] }
zcash_client_backend = { git = "https://github.com/adityapk00/librustzcash", rev = "7183acd2fe12ebf201cae5b871166e356273c481"}
zcash_proofs = { git = "https://github.com/adityapk00/librustzcash", rev = "7183acd2fe12ebf201cae5b871166e356273c481", features = ["multicore"]}
zcash_encoding = { git = "https://github.com/adityapk00/librustzcash", rev = "7183acd2fe12ebf201cae5b871166e356273c481"}
zcash_note_encryption = { git = "https://github.com/adityapk00/librustzcash", rev = "7183acd2fe12ebf201cae5b871166e356273c481", features = ["pre-zip-212"]}

[dev-dependencies]
portpicker = "0.1.1"
tempdir = "0.3.7"

[build-dependencies]
tonic-build = "0.7.2"
